'toObject<T>' abstract